--- a/07-composite-observer-jfx/src/main/resources/de/thro/inf/prg3/a07/views/main.fxml
+++ b/07-composite-observer-jfx/src/main/resources/de/thro/inf/prg3/a07/views/main.fxml
@@ -22,7 +22,7 @@
       <GridPane.margin>
          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
       </GridPane.margin></Button>
-	<Button fx:id="btnClose" onAction="#onCloseClicked" text="Close" GridPane.columnIndex="1" GridPane.rowIndex="0">
+	<Button fx:id="btnClose"  text="Close" GridPane.columnIndex="1" GridPane.rowIndex="0">
       <GridPane.margin>
          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
       </GridPane.margin></Button>
